syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "queries.proto";

option csharp_namespace = "Grpc.Protos.Products";

package Grpc.Protos.Products;

message GetAllProductsResponse {
    repeated ProductShortRead products = 1;
}
message GetAllProductsRequest {
}

message ProductShortRead {
    string id = 1;
    string title = 2;
    string special_code = 3;
}



message CreateProductRequest {
    string default_title = 1;
    string default_description = 2;
    double default_price = 3;
    string seller_id = 4;
}

message CreateProductSellerRequest {
    string title = 2;
    string special_code = 3;
    string bank_account_number = 4;
    string contact_email = 5;
    string contact_site = 6;
    string description = 7;
}

message ProductSellerRead {
    string seller_id = 1;
    string title = 2;
    string special_code = 3;
    string bank_account_number = 4;
    string contact_email = 5;
    string contact_site = 6;
    string description = 7;
}


message ProductReadMessage {
	string product_id = 1;
    string description = 2;
    string special_code = 3;
    google.protobuf.Timestamp date_updated = 5;
    ProductSellerRead seller = 6;
}




